# CaptAIn_v2

./: .gitignore  README.md  aerodynamics.cpp  aerodynamics.py  aerodynamics_slow_2.py  aerodynamics_test.py  config.ini  converter.py  environment.py  environment_slow.py  environment_test.py  gym_environment.py  gym_environment_slow.py  main.py  pyproject.toml  render.py  stablebaselines_utils.py  utils.py
