[tool.poetry]
name = "captain_v2"
version = "0.1.0"
description = ""
authors = ["Yann Berthelot"]

[tool.poetry.dependencies]
python = "^3.8"
gym = {git = "https://github.com/openai/gym.git"}
stable-baselines3 = "^1.0"
tensorboard = "^2.4.1"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
