[tool.poetry]
name = "captain_v2"
version = "0.1.0"
description = ""
authors = ["Yann Berthelot"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
gym = "0.19"


tensorboard = "^2.4.1"
moviepy = "^1.0.3"
numba = "^0.53.1"
scipy = "^1.7.1"
stable-baselines3 = {git = "https://github.com/YannBerthelot/stable-baselines3.git"}

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
